netlify form add

--- a/booking.html
+++ b/booking.html
@@ -61,7 +61,7 @@
     <div class="container">
       <h3 class="form__title">Book Table</h3>
       <div class="form__wrapper">
-        <form name="booking" method="POST" netlify>
+        <form name="booking form" netlify>
           <div class="form__group">
             <label for="firstName">First Name</label>
             <input type="text" id="firstName" name="First Name" required>
