--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
         Contact Us!
       </h3>
       <div class="form__wrapper">
-        <form name="contact" method="POST" netlify>
+        <form name="contact form" netlify>
           <div class="form__group">
             <label for="firstName">First Name</label>
             <input type="text" id="firstName" name="First Name" required>
